Archive2/c8/c401a7b8a7cad8/output
main.cpp: In instantiation of 'constexpr Size n_items() [with Fixed_size_container = int [5]; Size = long int]':
main.cpp:33:24:   required from here
main.cpp:24:54: error: incomplete type 'detail::N_items_<int [5]>' used in nested name specifier
     { return detail::N_items_<Fixed_size_container>::count; }
                                                      ^
main.cpp:24:61: error: body of constexpr function 'constexpr Size n_items() [with Fixed_size_container = int [5]; Size = long int]' not a return-statement
     { return detail::N_items_<Fixed_size_container>::count; }
                                                             ^
main.cpp: In function 'constexpr Size n_items() [with Fixed_size_container = int [5]; Size = long int]':
main.cpp:24:61: warning: control reaches end of non-void function [-Wreturn-type]
     { return detail::N_items_<Fixed_size_container>::count; }
                                                             ^
